responsiveness updates, CSS cleanup

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -16,11 +16,9 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 fixed-top">
-            <div class="container-fluid nav-bar-container">
-                <!-- Brand -->
-                <a class="navbar-brand d-flex align-items-center" href="/">
-                    <img src="/assets/images/mojo_nobg.png" alt="Logo" class="img-fluid"
-                        style="height: 40px; transform: scale(5.0); transform-origin: center;">
+            <div class="container-fluid nav-bar-container w-100">
+                <a class="navbar-brand" href="/">
+                    <img src="/assets/images/mojo_nobg.png" alt="Logo" class="img-brand" style="">
                 </a>
 
                 <!-- Toggler -->
