--- a/src/contact.njk
+++ b/src/contact.njk
@@ -27,7 +27,7 @@
                     LET'S CONNECT
                 </h2>
                 <h3 class="mb-4 second-title" style="font-size: 3.0rem; font-weight: 600;">
-                    Your <strong>Modern </strong>Finance <br> and Accounting Partner for Success Awaits
+                    Your <strong>Modern </strong>Finance and Accounting Partner for Success Awaits
                 </h3>
                 <p class="mb-4">
                     <!-- We’d love to hear from you! Whether you have questions about our services, need assistance, or are -->
