--- a/src/pricing.njk
+++ b/src/pricing.njk
@@ -491,9 +491,8 @@
                 <h2 class="cta-title text-white fw-bold mb-3 py-4">
                     <!-- Are you ready to elevate your business' financial health and drive sustainable growth? -->
                     <!-- Book a call today to dive into the details. -->
-                    Artificial intelligence can't replace what we do, but it enhances our services, so we use it.<br>
-                    This
-                    means you get more for your money. Book a call today to dive into the details.
+                    Artificial intelligence can't replace what we do, but it enhances our services, so we use it.
+                    This means you get more for your money. Book a call today to dive into the details.
                 </h2>
                 <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" target="_blank" class="btn btn-primary btn-lg cta-btn">
                     Let's Have a Conversation
