--- a/src/faq.njk
+++ b/src/faq.njk
@@ -45,7 +45,7 @@
                         CFO Services provide strategic financial guidance typically offered by a
                         Chief Financial Officer, but on an outsourced or part-time basis. These
                         services include financial planning, budgeting, forecasting, cash flow
-                        management, and performance analysis. They are ideal for small to
+                        management and performance analysis. They are ideal for small to
                         medium-sized businesses, startups, or organizations that need high-level
                         financial expertise without hiring a full-time CFO. We provide CFO support services as well as a
                         full finance and accounting solution for one flat rate.
@@ -78,7 +78,7 @@
                                 reports including profit & loss, balance sheets and
                                 KPIs.</li>
                             <li><strong>Fundraising Support:</strong> Assisting with
-                                investor pitches, financial modeling, and
+                                investor pitches, financial modeling and
                                 capital-raising strategies.</li>
                             <li><strong>Risk Management:</strong> Identifying and mitigating
                                 financial risks.</li>
@@ -100,10 +100,11 @@
                     data-bs-parent="#faqAccordion">
                     <div class="accordion-body">
                         Traditional accounting focuses only on analyzing historical data. Our CFO Services are both
-                        backward and forward looking, emphasizing accurate bookkeeping, accounting, and operations, but
-                        with an emphasis on strategic planning, financial analysis, and growth-oriented decision-making.
+                        backward and forward looking, emphasizing accurate bookkeeping, accounting, and operations but
+                        with an emphasis on strategic planning, financial analysis and growth-oriented decision-making.
                         While bookkeepers and accountants only record and report, our finance and accounting
-                        professionals not only do this, but we help you plan and achieve your organization's objectives.
+                        professionals not only do this but also help you plan and achieve your organization's
+                        objectives.
                     </div>
                 </div>
             </div>
@@ -120,18 +121,15 @@
                     <div class="accordion-body">
                         Our services are designed for:
                         <ul>
-                            <li><strong>Startups</strong> requiring basic accounting, financial structure, and
-                                fundraising
-                                support.</li>
+                            <li><strong>Startups</strong> requiring basic accounting, financial structure and
+                                fundraising support.</li>
                             <li><strong>Small to Medium Enterprises</strong> (SMEs) aiming to scale or
                                 improve profitability.</li>
                             <li><strong>Nonprofits</strong> requiring regular and better financial and accounting
                                 oversight.</li>
                             <li><strong>Businesses in Transition</strong> (e.g., mergers, acquisitions, or
-                                leadership changes) requiring interim financial
-                                leadership.</li>
+                                leadership changes) requiring interim financial leadership.</li>
                         </ul>
-
                     </div>
                 </div>
             </div>
@@ -140,13 +138,13 @@
                 <h2 class="accordion-header" id="faqHeadingFive">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#faqCollapseFive" aria-expanded="false" aria-controls="faqCollapseFive">
-                        How are your CFO Services priced?
+                        How are your CFO services priced?
                     </button>
                 </h2>
                 <div id="faqCollapseFive" class="accordion-collapse collapse" aria-labelledby="faqHeadingFive"
                     data-bs-parent="#faqAccordion">
                     <div class="accordion-body">
-                        Pricing is tailored to your business’s needs and complexity. We offer
+                        Pricing is tailored to your organization's needs and complexity. We offer
                         the following packages:
                         <ul>
                             <li><strong>Essential Services:</strong> $625 / week for a
@@ -270,7 +268,7 @@
                             <li>Using secure, encrypted platforms for data storage and
                                 communication.</li>
                             <li>Implementing strict access controls.</li>
-                            <li>Adhering to industry-standard privacy regulations.</li>
+                            <li>Adhering to industry standard privacy regulations.</li>
                         </ul>
                     </div>
                 </div>
@@ -374,9 +372,9 @@
                     data-bs-parent="#faqAccordion">
                     <div class="accordion-body">
                         Our team consists of experienced financial professionals with experience as CFOs at large
-                        organizations, working on an interim basis as CFOs, individuals with advanced degrees and
-                        professional certifications with proven track records of driving organizational success,
-                        strategic planning, fundraising and driving business growth.
+                        organizations, working on an interim basis as CFOs, and individuals with advanced degrees and
+                        professional certifications, each with a proven track record of driving organizational success,
+                        strategic planning, fundraising, and business growth.
                         <br>
                         <br>
                         Our team brings to the table not only experience working in a Chief Financial Officer capacity
@@ -402,8 +400,10 @@
                         Success is measured by:
                         <ul>
                             <li>
-                                Accurate and timely bookkeeping and financial reporting, improved growth, comma,
-                                profitability and cash flow, achievement of financial goals
+                                Accurate and timely bookkeeping and financial reporting.
+                            </li>
+                            <li>
+                                Improved growth, profitability, and cash flow.
                             </li>
                             <li>
                                 Achievement of financial goals (e.g., securing funding).
