--- a/src/assets/css/faq.css
+++ b/src/assets/css/faq.css
@@ -96,11 +96,11 @@
     }
 
     .hero .hero-card>h1.display-5 {
-        font-size: 2rem;
+        font-size: 40px;
     }
 
     .hero .hero-card p {
-        font-size: 1rem;
+        font-size: 1.15rem;
     }
 
     .hero-btn {
