minor changes, formatting and images updated for laptops

--- a/src/about.njk
+++ b/src/about.njk
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="hero">
     <!-- Hero card content -->
-    <div class="hero-card text-start p-5">
+    <div class="hero-card text-start">
         <h1 class="display-5 fw-bold mb-1 pt-3 pb-4 p-2">
             <!-- Tired of Managing Your Company’s Finances alone? -->
             Should be doing better...
