--- a/src/index.njk
+++ b/src/index.njk
@@ -17,8 +17,11 @@
                     financial growth and stability.
                 </h1>
                 <p class="text-light mb-5">
-                    Sick of working long hours & taking on all the risk of owning a business for low
-                    margins and poor cash flow?<br><br>
+                    You should be doing better...
+                    <br>A life with more financial security where you can spend more time doing your favorite
+                    things...
+                    <br> You dont have to do this alone.
+                    <br><br>
                     We fix that.
                 </p>
                 <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn btn-dark hero-btn px-4 py-2 w-lg-50 w-75"
@@ -39,20 +42,14 @@
             NUMBER ONE FINANCE AND ACCOUNTING SOLUTIONS EXPERTS
         </h2>
         <p class="h5 fw-semibold mb-4">
-            Finance and accounting solutions for hard working Americans.
-            <!-- Mojo CFO specializes in American-owned businesses generating $1-$75M in annual revenue -->
+            Mojo CFO provides expertise to American organizations generating $1-$100 Million in annual revenue.
         </p>
         <p class="lead mx-auto" style="max-width: 800px;">
-            Mojo CFO provides expertise to American organizations generating $1-$100 Million in annual revenue.
-            Our expertise is in everything finance and accounting. We take care of the finances so you can focus on
-            doing what you do best. We tackle your cash flow frustrations, improve profitability and provide the
-            strategic financial leadership your organization. So change business to organization needs to grow all
-            without the cost of a full time CFO
-            <!-- Our expertise is in everything finance and accounting. We take care of the finances so you can -->
-            <!-- focus -->
-            <!-- on doing what you do best. We tackle your cash flow frustrations, improve profitability, and -->
-            <!-- provide the strategic financial leadership your business needs to grow – all without the cost of -->
-            <!-- a full-time CFO. -->
+            Our expertise is in everything finance and accounting. We take care of the finances so you can
+            focus
+            on doing what you do best. We tackle your cash flow frustrations, improve profitability, and
+            provide the strategic financial leadership your organization needs to grow – all without the cost of
+            a full time CFO.
         </p>
     </div>
 </section>
@@ -144,7 +141,7 @@
                             <span>CFO support services</span>
                         </li>
                         <li class="d-flex align-items-center text-white py-2 border-bottom border-secondary">
-                            <i class="bi bi-briefcase fs-3 text-info me-3"></i>
+                            <i class="bi bi-shield-lock fs-3 text-info me-3"></i>
                             <span>Cash flow management</span>
                         </li>
                         <li class="d-flex align-items-center text-white py-2 border-bottom border-secondary">
@@ -188,6 +185,7 @@
                     {% set logos = [
                     "/assets/logos/filthy.webp",
                     "/assets/logos/flax_seal.webp",
+                    "/assets/logos/blink_logo.jpg",
                     "/assets/logos/subway.png",
                     "/assets/logos/bis_america_advis.png",
                     "/assets/logos/oceanclub.png",
