--- a/src/pricing.njk
+++ b/src/pricing.njk
@@ -154,13 +154,19 @@
                         <li class="feature-item mb-2 d-flex align-items-start gap-2">
                             <img src="/assets/icons/check-mark.svg" width="16" height="16" class="mt-1" alt="">
                             <span>
-                                Cash flow forecasting (quarterly)
+                                Cash flow forecasting
                             </span>
                         </li>
                         <li class="feature-item mb-2 d-flex align-items-start gap-2">
                             <img src="/assets/icons/check-mark.svg" width="16" height="16" class="mt-1" alt="">
                             <span>
-                                Quaterly basic tax planning coordination with CPA
+                                Quaterly basic tax planning
+                            </span>
+                        </li>
+                        <li class="feature-item mb-2 d-flex align-items-start gap-2">
+                            <img src="/assets/icons/check-mark.svg" width="16" height="16" class="mt-1" alt="">
+                            <span>
+                                Coordination with CPA
                             </span>
                         </li>
                         <li class="feature-item mb-2 d-flex align-items-start gap-2">
@@ -357,19 +363,19 @@
                                         Buy-Side M&amp;A
                                     </li>
                                     <li>
-                                        Sell-Side M&amp;A Preparation
+                                        Sell-Side M&amp;A preparation
                                     </li>
                                     <li>
-                                        Debt &amp; Equity Capital Raising
+                                        Debt &amp; equity capital raising
                                     </li>
                                     <li>
-                                        Restructuring Services
+                                        Restructuring services
                                     </li>
                                     <li>
-                                        Customized Transaction Advisory
+                                        Customized transaction advisory
                                     </li>
                                     <li>
-                                        Performance Improvement
+                                        Performance improvement
                                     </li>
                                 </ul>
                             </span>
@@ -377,13 +383,13 @@
                         <li class="feature-item mb-2 d-flex align-items-start gap-2">
                             <img src="/assets/icons/check-mark.svg" width="16" height="16" class="mt-1" alt="">
                             <span>
-                                Quarterly Strategic Review
+                                Quarterly strategic review
                             </span>
                         </li>
                         <li class="feature-item mb-2 d-flex align-items-start gap-2">
                             <img src="/assets/icons/check-mark.svg" width="16" height="16" class="mt-1" alt="">
                             <span>
-                                Priority Access to Mojo CFO's network (investors, buyers, etc.)
+                                Priority access to Mojo CFO's network (investors, buyers, etc.)
                             </span>
                         </li>
                     </ul>
