more minor changes

--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -45,7 +45,7 @@
     background-color: var(--primary-color);
     margin-top: 1rem;
     padding: 1rem;
-    margin-left: 0.9rem;
+    /*margin-left: 0.9rem;*/
     font-size: 1.25rem;
 }
 
