--- a/src/about.njk
+++ b/src/about.njk
@@ -17,7 +17,7 @@
         </h1>
 
         <p class="text-light mb-3 pt-4 pb-5 p-2">
-            At Mojo CFO, we're your modern finance and accounting partner for success with the expertise necessary to
+            At Mojo CFO, we're your modern finance and accounting partner with the expertise necessary to
             set you up for success.
             <!-- At Mojo CFO, our team of vetted CFOs with operational expertise in your industry is <br>here to -->
             <!-- help. -->
