minor formatting change

--- a/src/about.njk
+++ b/src/about.njk
@@ -140,12 +140,12 @@
 
 <section class="cta-section text-center py-5 d-flex align-items-center" style="min-height: 60vh">
     <div class="container">
-        <h3 class="cta-title text-white p-3">
+        <h3 class="cta-title fw-bold text-white p-3">
             LET'S GET STARTED
         </h3>
-        <h2 class="cta-title-h2 text-white p-3">
+        <h2 class="cta-title-h2 fw-bold text-white p-3">
             <!-- READY TO TRANSFORM YOUR FINANCIAL STRATEGY? -->
-            UNLOCK PROSPERITY WITH OUR AI POWERED SOLUTIONS AND PERSONAL EXPERTISE
+            UNLOCK PROSPERITY WITH OUR AI POWERED SOLUTIONS<br>AND PERSONAL EXPERTISE
         </h2>
         <p class="cta-text text-white mb-4 p-2">
             <!-- Schedule a financial clarity call with Mojo CFO today and take the first step toward achieving your -->
