--- a/src/index.njk
+++ b/src/index.njk
@@ -63,7 +63,7 @@
                 <h2 class="h4 text-uppercase mb-3">
                     Receive leadership, <br>management, and <br>accountability
                 </h2>
-                <p class="mb-2">We’ve helped our clients:</p>
+                <p class="mb-2">We have helped our clients:</p>
                 <ul class="mb-4">
                     <li>Reduce tax liabilities by hundreds of thousands of dollars.</li>
                     <li>Procure millions of dollars in capital to improve cash flow and grow.</li>
