--- a/src/index.njk
+++ b/src/index.njk
@@ -42,12 +42,12 @@
             NUMBER ONE FINANCE AND ACCOUNTING SOLUTIONS EXPERTS
         </h2>
         <p class="h5 fw-semibold mb-4">
-            Mojo CFO provides expertise to American organizations generating $1-$100 Million in annual revenue.
+            Mojo CFO provides expertise to American organizations generating $1 million to $100 million in annual
+            revenue.
         </p>
         <p class="lead mx-auto" style="max-width: 800px;">
             Our expertise is in everything finance and accounting. We take care of the finances so you can
-            focus
-            on doing what you do best. We tackle your cash flow frustrations, improve profitability, and
+            focus on doing what you do best. We tackle your cash flow frustrations, improve profitability, and
             provide the strategic financial leadership your organization needs to grow – all without the cost of
             a full time CFO.
         </p>
