--- a/src/contact.njk
+++ b/src/contact.njk
@@ -18,7 +18,7 @@
     </div>
 </div>
 
-<section id="our-services" class="p-2 position-relative">
+<section id="our-services" class="p-2 pt-5 position-relative">
     <h1 class="services-title text-center">GET IN TOUCH</h1>
     <div class="container">
         <div class="row align-items-center">
