--- a/src/index.njk
+++ b/src/index.njk
@@ -55,7 +55,7 @@
 </section>
 
 
-<section id="our-services" class="p-2 position-relative">
+<section id="our-services" class="p-2 pt-4 position-relative">
     <h1 class="services-title text-center">Our Services</h1>
     <div class="container">
         <div class="row align-items-center">
